package Modelo.VO;

public class Admin extends Persona {

    public Admin(String nombre, String apellido, String telefono, String correo) {
        super(nombre, apellido, telefono, correo);
    }

    public Admin() {
    }

}
